# agentickode

./: .env.example  .gitattributes  .gitignore  .mcp.json  CHANGELOG.md  CLA.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile.backend  Dockerfile.backend.dev  Dockerfile.frontend  Dockerfile.frontend.dev  LICENSING.md  Makefile  NOTICE  README.md  SECURITY.md  docker-compose.dev.yml  docker-compose.fallback.yml  docker-compose.traefik.yml  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  requirements-dev.txt  requirements-host.txt  requirements.txt
.claude/: settings.json
.claude/agents/: arch-planner.md  code-reviewer.md  implementer.md  plan-reviser.md  req-analyzer.md  reviewer.md  security-analyst.md  tester.md
.claude/commands/: deploy.md  fix-issue.md  project-development-flow.md  review.md  updatedocs.md
.claude/rules/: api-conventions.md  code-style.md  documentation.md  testing.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
alembic/: env.py
backend/: config.py  database.py  dependencies.py  main.py
backend/api/: agents.py  (+41 more)
claudedocs/: INDEX.md  research_autonomous_platform_integrations_20260328.md
docs/: IMPLEMENTATION_LOG.md  NAME_RESEARCH.md  WORKER_PIPELINE.md  flow-prompt-validation.md  workflows.md
frontend/: eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo  vite.config.ts  vitest.config.ts
scripts/: check_alembic_heads.py  check_complexity.py  host_bridge.py  install-agents.sh  pre-commit  setup-hooks.sh
tasks/: lessons.md
tests/: conftest.py
(+683 files in other folders)
