[project]
name = "autodev-backend"
version = "1.0.0"
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults (FastAPI Depends)
]

[tool.ruff.lint.isort]
known-first-party = ["backend"]

[tool.coverage.run]
concurrency = ["greenlet"]
source = ["backend"]

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "basic"
include = ["backend"]
exclude = ["tests", "alembic"]
reportMissingImports = true
reportMissingTypeStubs = false
# SQLAlchemy Column descriptors behave as plain types at runtime
# but pyright sees Column[T] != T — suppress these false positives
reportAttributeAccessIssue = false
reportGeneralTypeIssues = false
reportArgumentType = false
